/*
 * Copyright 2016 Google Inc. All Rights Reserved.
 * Use of this source code is governed by a BSD-style
 * license that can be found in the LICENSE file or at
 * https://developers.google.com/open-source/licenses/bsd
 */

syntax = "proto3";

package google.api.gax.grpc.integration_tests;

import "google/api/annotations.proto";

service TestService {
  rpc DoSimple(SimpleRequest) returns (SimpleResponse) {
    option (google.api.http) = {
      get: "/v1/simple/{name}"
    };
  }

  rpc ServerStreaming(SimpleRequest) returns (stream SimpleResponse) {
    option (google.api.http) = {
      get: "/v1/serverStreaming/{name}"
    };
  }

  rpc EchoHeaders(EchoHeadersRequest) returns (EchoHeadersResponse) {
    option (google.api.http) = {
      post: "/v1/custom:echoHeaders"
    };
  }
}

message SimpleRequest {
  string name = 1;
}

message SimpleResponse {
  string name = 2;
}

message EchoHeadersRequest {
}

message EchoHeadersResponse {
  message HeaderValue {
    bytes bytesValue = 1;
    string stringValue = 2;
  }

  map<string, HeaderValue> headers = 1;
}